@@ -49,7 +49,6 @@ import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 import javax.security.auth.login.LoginException;
 
@@ -156,7 +155,7 @@ public class AdminConfigurationHandler extends BaseHandler {
 
         List<Long> currentSystems = serverGroupHandler.listSystemsMinimal(loggedInUser, name).stream()
                 .map(system -> system.getId())
-                .collect(Collectors.toList());
+                .toList();
 
         Map<String, Long> minionIdMap = systemHandler.getMinionIdMap(loggedInUser);
         LOG.debug("Minion map {}", minionIdMap);
@@ -165,7 +164,7 @@ public class AdminConfigurationHandler extends BaseHandler {
         List<Long> selectedMinionIds = minions.stream()
                 .map(minionIdMap::get)
                 .filter(id -> id != null)
-                .collect(Collectors.toList());
+                .toList();
 
         List<Long> toAdd = new ArrayList<>();
         for (Long id: selectedMinionIds) {
@@ -232,7 +231,7 @@ public class AdminConfigurationHandler extends BaseHandler {
         User target = XmlRpcUserHelper.getInstance().lookupTargetUser(loggedInUser, name);
         List<String> existingGroups = ServerGroupFactory.listAdministeredServerGroups(target).stream()
                  .map(group -> group.getName())
-                 .collect(Collectors.toList());
+                 .toList();
         LOG.debug("existing groups: {}", existingGroups);
         LOG.debug("requested groups: {}", systemGroups);
         List<String> toAdd = new ArrayList<>();
@@ -259,7 +258,7 @@ public class AdminConfigurationHandler extends BaseHandler {
 
         List<String> existingManageableChannels = Arrays.stream(channelHandler.listManageableChannels(target))
                  .map(c -> ((ChannelTreeNode)c).getChannelLabel())
-                 .collect(Collectors.toList());
+                 .toList();
 
         LOG.debug("existing manageable channels: {}", existingManageableChannels);
         LOG.debug("requested manageable channels: {}", manageableChannels);
@@ -279,7 +278,7 @@ public class AdminConfigurationHandler extends BaseHandler {
 
         List<String> existingSubscribableChannels = Arrays.stream(channelHandler.listMyChannels(target))
                  .map(c -> ((ChannelTreeNode)c).getChannelLabel())
-                 .collect(Collectors.toList());
+                 .toList();
 
         LOG.debug("existing subscribable channels: {}", existingSubscribableChannels);
         LOG.debug("requested subscribable channels: {}", subscribableChannels);
@@ -392,7 +391,7 @@ public class AdminConfigurationHandler extends BaseHandler {
         activationKeyHandler.addServerGroups(loggedInUser, key,
                  serverGroupsToAdd.stream()
                  .map(groupName -> serverGroupHandler.getDetails(loggedInUser, groupName).getId().intValue())
-                 .collect(Collectors.toList()));
+                 .toList());
         LOG.debug("Configuration channels: {}", configurationChannels);
         activationKeyHandler.setConfigChannels(loggedInUser, Arrays.asList(key), configurationChannels);
     }
@@ -500,7 +499,7 @@ public class AdminConfigurationHandler extends BaseHandler {
                         activationKeyData.getOrDefault("system_types", Collections.emptyList());
                 List<String> systemTypesList = systemTypes.stream()
                         .map(entry -> entry.get("type"))
-                        .collect(Collectors.toList());
+                        .toList();
                 String contactMethod = (String) activationKeyData.get("contact_method");
                 Boolean configureAfterRegistration = (Boolean) activationKeyData.get("configure_after_registration");
                 List<String> configurationChannels = (List<String>)
