@@ -27,7 +27,6 @@ import org.apache.commons.lang3.StringUtils;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 /**
  * PackageHelper
@@ -53,7 +52,7 @@ public class PackageHelper {
 
         // deal with the providing channels first
         DataResult<Row> dr = PackageManager.providingChannels(user, pkg.getId());
-        List<String> channelLabels = dr.stream().map(r -> (String)r.get("label")).collect(Collectors.toList());
+        List<String> channelLabels = dr.stream().map(r -> (String)r.get("label")).toList();
         pkgMap.put("providing_channels", channelLabels);
 
         // now deal with the actual package object.
