@@ -114,7 +114,7 @@ public class JobReturnEventMessageAction implements MessageAction {
             List<Object> funArgs = (List<Object>) jobReturnEvent.getData().getFunArgs();
             if (!funArgs.isEmpty() && funArgs.get(0) instanceof Map) {
                 functionArgs = funArgs.stream().filter(x -> x instanceof Map)
-                        .map(x -> (Map<String, Object>) x).collect(Collectors.toList());
+                        .map(x -> (Map<String, Object>) x).toList();
             }
         }
         boolean isFunctionTestMode = functionArgs.stream()
