@@ -26,7 +26,6 @@ import java.util.Map;
 import java.util.Optional;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
-import java.util.stream.Collectors;
 
 public class PXEEvent {
     private static final Logger LOG = LogManager.getLogger(PXEEvent.class);
@@ -98,7 +97,7 @@ public class PXEEvent {
         return macGrains.entrySet().stream()
                 .filter(e -> !e.getKey().equals("lo"))
                 .map(e -> (String)e.getValue())
-                .collect(Collectors.toList());
+                .toList();
     }
 
     /**
