@@ -65,7 +65,6 @@ import java.nio.file.Path;
 import java.util.Date;
 import java.util.List;
 import java.util.Random;
-import java.util.stream.Collectors;
 
 /**
  * Tests for {@link SCCClient} methods.
@@ -98,7 +97,7 @@ public class SCCSystemRegistrationManagerTest extends BaseTestCaseWithUser {
                                 .map(system ->
                                         new SCCSystemCredentialsJson(system.getLogin(), system.getPassword(), 12345L)
                                 )
-                                .collect(Collectors.toList())
+                                .toList()
                 );
             }
 
@@ -115,7 +114,7 @@ public class SCCSystemRegistrationManagerTest extends BaseTestCaseWithUser {
         List<SCCRegCacheItem> allUnregistered = SCCCachingFactory.findSystemsToForwardRegistration();
         List<SCCRegCacheItem> testSystems = allUnregistered.stream()
                 .filter(i -> i.getOptServer().get().equals(testSystem))
-                .collect(Collectors.toList());
+                .toList();
         SCCCredentials credentials = CredentialsFactory.createSCCCredentials("username", "password");
         credentials.setUrl("https://scc.suse.com");
         CredentialsFactory.storeCredentials(credentials);
@@ -173,7 +172,7 @@ public class SCCSystemRegistrationManagerTest extends BaseTestCaseWithUser {
         List<SCCRegCacheItem> allUnregistered = SCCCachingFactory.findSystemsToForwardRegistration();
         List<SCCRegCacheItem> testSystems = allUnregistered.stream()
                 .filter(i -> i.getOptServer().get().equals(testSystem))
-                .collect(Collectors.toList());
+                .toList();
 
         SCCCredentials credentials = CredentialsFactory.createSCCCredentials("username", "password");
         CredentialsFactory.storeCredentials(credentials);
@@ -209,7 +208,7 @@ public class SCCSystemRegistrationManagerTest extends BaseTestCaseWithUser {
                                 .map(system ->
                                         new SCCSystemCredentialsJson(system.getLogin(), system.getPassword(), 12345L)
                                 )
-                                .collect(Collectors.toList())
+                                .toList()
                 );
             }
 
@@ -233,7 +232,7 @@ public class SCCSystemRegistrationManagerTest extends BaseTestCaseWithUser {
         List<SCCRegCacheItem> allUnregistered = SCCCachingFactory.findSystemsToForwardRegistration();
         List<SCCRegCacheItem> testSystems = allUnregistered.stream()
                 .filter(i -> i.getOptServer().get().equals(testSystem))
-                .collect(Collectors.toList());
+                .toList();
         SCCCredentials credentials = CredentialsFactory.createSCCCredentials("username", "password");
         credentials.setUrl("https://scc.suse.com");
         CredentialsFactory.storeCredentials(credentials);
@@ -281,7 +280,7 @@ public class SCCSystemRegistrationManagerTest extends BaseTestCaseWithUser {
                                 .map(system ->
                                         new SCCSystemCredentialsJson(system.getLogin(), system.getPassword(), 12345L)
                                 )
-                                .collect(Collectors.toList())
+                                .toList()
                 );
             }
 
@@ -303,7 +302,7 @@ public class SCCSystemRegistrationManagerTest extends BaseTestCaseWithUser {
         List<SCCRegCacheItem> allUnregistered = SCCCachingFactory.findSystemsToForwardRegistration();
         List<SCCRegCacheItem> testSystems = allUnregistered.stream()
                 .filter(i -> i.getOptServer().get().getServerInfo().getCheckin().equals(new Date(0)))
-                .collect(Collectors.toList());
+                .toList();
         SCCCredentials credentials = CredentialsFactory.createSCCCredentials("username", "password");
         credentials.setUrl("https://scc.suse.com");
         CredentialsFactory.storeCredentials(credentials);
@@ -355,7 +354,7 @@ public class SCCSystemRegistrationManagerTest extends BaseTestCaseWithUser {
                                         system.getPassword(),
                                         new Random().nextLong())
                                 )
-                                .collect(Collectors.toList())
+                                .toList()
                 );
             }
 
@@ -444,7 +443,7 @@ public class SCCSystemRegistrationManagerTest extends BaseTestCaseWithUser {
                                         system.getPassword(),
                                         new Random().nextLong())
                                 )
-                                .collect(Collectors.toList())
+                                .toList()
                 );
             }
 
@@ -548,7 +547,7 @@ public class SCCSystemRegistrationManagerTest extends BaseTestCaseWithUser {
                                         system.getPassword(),
                                         new Random().nextLong())
                                 )
-                                .collect(Collectors.toList())
+                                .toList()
                 );
             }
 
